# PreferredSoftwareList

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  lint.py  qml_tabs_style.xml
FormatterTarget/: CMakeLists.txt  cmake-format.cmake  git-clang-format.py  src.txt
SoftwareList/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  main.qml  qml.qrc
SoftwareList/DB/: DBManager.cpp  DBManager.h
SoftwareList/Model/: Category.cpp  Category.h  CategoryListModel.cpp  CategoryListModel.h  CategoryModel.cpp  CategoryModel.h  ContextualRole.h  ContextualRoleTableModel.cpp  ContextualRoleTableModel.h  ERD.pu  FilterOptionModel.cpp  FilterOptionModel.h  ModelProvider.cpp  ModelProvider.h  PlatformListModel.cpp  PlatformListModel.h  PreferenceRoleListModel.cpp  PreferenceRoleListModel.h  SWItemRole.h  SoftwareItem.cpp  SoftwareItem.h  SoftwareItemModel.cpp  SoftwareItemModel.h  SoftwareItemProxyModel.cpp  SoftwareItemProxyModel.h
SoftwareList/UI/: CategoryList.qml  MainWindow.qml  SWLFilterDialog.qml  SWLMenuBar.qml  SWLTabBar.qml  SWLTabSet.qml  SWLTabStack.qml  SWLToolBar.qml  SWListLoader.qml  SWListModuleImport.qml  SoftwareEntry.qml  SoftwareList.qml
SoftwareList/UI/+mobile/: MainWindow.qml
SoftwareList/UI/dummy/: CatModelList.qml  SoftModelList.qml
SoftwareList/extra_helper/: AddQtIosApp.cmake  Info.plist.in  QtStaticCMake.cmake  for_qtcreator.txt  ios.toolchain.cmake  ios_extra_srcs.txt
SoftwareListTests/: CMakeLists.txt  unittest_main.cpp
SoftwareListTests/Category/: CategoryTests.cpp
SoftwareListTests/SoftwareItem/: ContextualRoleModelTests.cpp  SoftwareModelTests.cpp  SoftwareProxyModelTests.cpp
SoftwareListUITests/: CMakeLists.txt  UITestServer.h  dependencies.md  for_qtcreator.txt
SoftwareListUITests/CategoryListTest/: CMakeLists.txt  main.cpp
SoftwareListUITests/SoftwareListFocusTest/: CMakeLists.txt  main.cpp
cmake/: CPM.cmake
cmake/modules/: FindAnyRPC.cmake
